--- a/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -242,6 +242,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b5b42101",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column                       Non-Null Count  Dtype \n",
+      "---  ------                       --------------  ----- \n",
+      " 0   gender                       1000 non-null   object\n",
+      " 1   race_ethnicity               1000 non-null   object\n",
+      " 2   parental_level_of_education  1000 non-null   object\n",
+      " 3   lunch                        1000 non-null   object\n",
+      " 4   test_preparation_course      1000 non-null   object\n",
+      " 5   math_score                   1000 non-null   int64 \n",
+      " 6   reading_score                1000 non-null   int64 \n",
+      " 7   writing_score                1000 non-null   int64 \n",
+      "dtypes: int64(3), object(5)\n",
+      "memory usage: 62.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "041aa39d",
    "metadata": {},
@@ -289,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "707d6a7b",
    "metadata": {},
    "outputs": [
@@ -307,7 +339,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ae16686e",
    "metadata": {},
    "outputs": [
@@ -344,7 +376,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "25f95bc8",
    "metadata": {},
    "outputs": [
@@ -412,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2c2b61b6",
    "metadata": {},
    "outputs": [
@@ -430,7 +462,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "76c608dc",
    "metadata": {},
    "outputs": [
@@ -544,7 +576,7 @@
        "max     100.00000     100.000000     100.000000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b9081742",
    "metadata": {},
    "outputs": [
@@ -732,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "2dd97e26",
    "metadata": {},
    "outputs": [
@@ -758,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "ae2822d1",
    "metadata": {},
    "outputs": [
@@ -830,7 +862,7 @@
        "1               completed          69             90             88  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "3ffbfdf7",
    "metadata": {},
    "outputs": [
@@ -987,7 +1019,7 @@
        "4          229  76.333333  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "26dc3844",
    "metadata": {},
    "outputs": [
@@ -1026,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "572c8a75",
    "metadata": {},
    "outputs": [
@@ -1828,7 +1860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
