model added,requirement fiel updated,etc

--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -426,12 +426,69 @@
     "        (\"OneHotEncoder\", oh_transformer, cat_features),\n",
     "         (\"StandardScaler\", numeric_transformer, num_features),        \n",
     "    ]\n",
-    ")"
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2173316",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Sure, let's break down each line of code in detail:\n",
+    "\n",
+    "- Selecting Features by Data Type:\n",
+    "python\n",
+    "Copy code\n",
+    "num_features = X.select_dtypes(exclude=\"object\").columns\n",
+    "cat_features = X.select_dtypes(include=\"object\").columns\n",
+    "X.select_dtypes(exclude=\"object\") selects columns from the DataFrame X that do not have object data type, i.e., numerical features.\n",
+    ".columns returns the names of the selected columns.\n",
+    "X.select_dtypes(include=\"object\") selects columns from the DataFrame X that have object data type, i.e., categorical features.\n",
+    ".columns returns the names of the selected columns.\n",
+    "- Importing Necessary Modules:\n",
+    "python\n",
+    "Copy code\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "OneHotEncoder and StandardScaler are imported from the sklearn.preprocessing module. These are transformers used for encoding categorical features and scaling numerical features, respectively.\n",
+    "ColumnTransformer is imported from the sklearn.compose module. It's used to apply different transformers to different columns of input data.\n",
+    "- Defining Transformers:\n",
+    "python\n",
+    "Copy code\n",
+    "numeric_transformer = StandardScaler()\n",
+    "oh_transformer = OneHotEncoder()\n",
+    "numeric_transformer is an instance of StandardScaler(), which will standardize numerical features by removing the mean and scaling to unit variance.\n",
+    "oh_transformer is an instance of OneHotEncoder(), which will convert categorical variables into a binary matrix representation (one-hot encoding).\n",
+    "- Creating Column Transformer:\n",
+    "python\n",
+    "Copy code\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    [\n",
+    "        (\"OneHotEncoder\", oh_transformer, cat_features),\n",
+    "        (\"StandardScaler\", numeric_transformer, num_features),        \n",
+    "    ]\n",
+    ")\n",
+    "preprocessor is a ColumnTransformer object that will apply transformations to different columns of the input data.\n",
+    "Inside the ColumnTransformer() constructor:\n",
+    "The first argument is a list of tuples.\n",
+    "Each tuple consists of three elements: the name of the transformer, the transformer object itself, and the columns to which the transformer should be applied.\n",
+    "The first tuple (\"OneHotEncoder\", oh_transformer, cat_features) specifies that the OneHotEncoder transformation should be applied to the columns in cat_features.\n",
+    "The second tuple (\"StandardScaler\", numeric_transformer, num_features) specifies that the StandardScaler transformation should be applied to the columns in num_features.\n",
+    "This setup allows for a unified preprocessing pipeline where different transformations are applied to different types of features, preparing the data for machine learning tasks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a14f6de",
+   "metadata": {},
+   "source": [
+    "after standardization of numerical valye with standardscaler, the values of \"Age\" are transformed to have a mean of 0 and a standard deviation of 1, making them more amenable for use in models that assume standardized data, such as many machine learning algorithms."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -441,7 +498,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
+   "id": "2bcf1ba6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         0.19399858,  0.39149181],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         1.42747598,  1.31326868],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         1.77010859,  1.64247471],\n",
+       "       ...,\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.12547206, -0.20107904],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.60515772,  0.58901542],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         1.15336989,  1.18158627]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -451,7 +541,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -472,7 +562,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -505,6 +595,49 @@
     "    rmse = np.sqrt(mean_squared_error(true, predicted))\n",
     "    r2_square = r2_score(true, predicted)\n",
     "    return mae, rmse, r2_square"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80c58a69",
+   "metadata": {},
+   "source": [
+    "- Linear Regression:\n",
+    "Linear regression is a simple and commonly used statistical technique for modeling the relationship between a dependent variable (target) and one or more independent variables (features).\n",
+    "It assumes a linear relationship between the input features and the target variable.\n",
+    "The model tries to fit a straight line to the data by minimizing the sum of squared differences between the observed and predicted values.\n",
+    "- Lasso (Least Absolute Shrinkage and Selection Operator):\n",
+    "Lasso regression is a linear regression technique that adds a penalty term (L1 regularization) to the loss function.\n",
+    "It not only tries to minimize the error between the observed and predicted values but also tries to minimize the absolute value of the coefficients, effectively pushing some of them to zero.\n",
+    "This helps in feature selection by automatically selecting the most important features and making the model simpler.\n",
+    "- Ridge Regression:\n",
+    "Similar to Lasso, Ridge regression is also a linear regression technique but uses a different penalty term (L2 regularization).\n",
+    "It adds a penalty term proportional to the square of the coefficients to the loss function.\n",
+    "Ridge regression helps to prevent overfitting by penalizing large coefficients, but unlike Lasso, it rarely results in coefficients being exactly zero, allowing all features to be retained.\n",
+    "- K-Neighbors Regressor:\n",
+    "K-nearest neighbors regression is a non-parametric method used for regression tasks.\n",
+    "It predicts the target variable by averaging the values of the 'k' nearest data points in the feature space.\n",
+    "The value of 'k' is a hyperparameter that needs to be tuned, and the prediction is based on the majority vote or averaging of the neighbors.\n",
+    "- Decision Tree Regressor:\n",
+    "Decision tree regression builds a regression model in the form of a tree structure.\n",
+    "It recursively splits the data into subsets based on the most significant feature at each node, aiming to minimize the variance of the target variable within each subset.\n",
+    "Decision trees are prone to overfitting, but techniques like pruning and setting maximum depth can help mitigate this issue.\n",
+    "- Random Forest Regressor:\n",
+    "Random Forest is an ensemble learning method that builds multiple decision trees during training and combines their predictions to obtain a more accurate and stable prediction.\n",
+    "Each tree in the random forest is trained on a random subset of the training data and uses a random subset of features for splitting at each node.\n",
+    "Random Forest reduces overfitting and improves generalization compared to individual decision trees.\n",
+    "- XGBRegressor (XGBoost Regressor):\n",
+    "XGBoost (Extreme Gradient Boosting) is a scalable and efficient implementation of gradient boosting algorithms.\n",
+    "It builds a series of decision trees sequentially, where each tree corrects the errors made by the previous ones.\n",
+    "XGBoost uses gradient descent optimization techniques and incorporates regularization to prevent overfitting.\n",
+    "- CatBoost Regressor:\n",
+    "CatBoost is a gradient boosting library designed specifically for categorical features.\n",
+    "It handles categorical variables automatically and efficiently, without the need for preprocessing like one-hot encoding.\n",
+    "CatBoost employs various techniques to improve training speed and generalization performance, such as ordered boosting, oblivious trees, and feature importance calculation.\n",
+    "- AdaBoost Regressor:\n",
+    "AdaBoost (Adaptive Boosting) is an ensemble learning method that combines multiple weak learners (typically decision trees) to create a strong learner.\n",
+    "It assigns weights to each data point and adjusts them at each iteration to focus more on the misclassified points.\n",
+    "AdaBoost sequentially trains the weak learners, with each subsequent learner focusing more on the difficult-to-classify examples, thus improving overall performance."
    ]
   },
   {
@@ -1045,7 +1178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
