--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2bcf1ba6",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
        "         1.15336989,  1.18158627]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -653,14 +653,14 @@
      "text": [
       "Linear Regression\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.3243\n",
-      "- Mean Absolute Error: 4.2671\n",
+      "- Root Mean Squared Error: 5.3240\n",
+      "- Mean Absolute Error: 4.2691\n",
       "- R2 Score: 0.8743\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.3960\n",
-      "- Mean Absolute Error: 4.2158\n",
-      "- R2 Score: 0.8803\n",
+      "- Root Mean Squared Error: 5.3773\n",
+      "- Mean Absolute Error: 4.2053\n",
+      "- R2 Score: 0.8812\n",
       "===================================\n",
       "\n",
       "\n",
@@ -692,14 +692,14 @@
       "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7077\n",
-      "- Mean Absolute Error: 4.5167\n",
-      "- R2 Score: 0.8555\n",
+      "- Root Mean Squared Error: 5.7133\n",
+      "- Mean Absolute Error: 4.5217\n",
+      "- R2 Score: 0.8552\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.2530\n",
-      "- Mean Absolute Error: 5.6210\n",
-      "- R2 Score: 0.7838\n",
+      "- Root Mean Squared Error: 7.2412\n",
+      "- Mean Absolute Error: 5.6110\n",
+      "- R2 Score: 0.7845\n",
       "===================================\n",
       "\n",
       "\n",
@@ -710,35 +710,35 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.6371\n",
-      "- Mean Absolute Error: 6.0250\n",
-      "- R2 Score: 0.7603\n",
+      "- Root Mean Squared Error: 7.6603\n",
+      "- Mean Absolute Error: 6.0400\n",
+      "- R2 Score: 0.7589\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.2851\n",
-      "- Mean Absolute Error: 1.8253\n",
-      "- R2 Score: 0.9768\n",
+      "- Root Mean Squared Error: 2.3068\n",
+      "- Mean Absolute Error: 1.8480\n",
+      "- R2 Score: 0.9764\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0959\n",
-      "- Mean Absolute Error: 4.7194\n",
-      "- R2 Score: 0.8473\n",
+      "- Root Mean Squared Error: 6.0078\n",
+      "- Mean Absolute Error: 4.6436\n",
+      "- R2 Score: 0.8517\n",
       "===================================\n",
       "\n",
       "\n",
       "XGBRegressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 0.9087\n",
-      "- Mean Absolute Error: 0.6148\n",
-      "- R2 Score: 0.9963\n",
+      "- Root Mean Squared Error: 1.0073\n",
+      "- Mean Absolute Error: 0.6875\n",
+      "- R2 Score: 0.9955\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.5889\n",
-      "- Mean Absolute Error: 5.0844\n",
-      "- R2 Score: 0.8216\n",
+      "- Root Mean Squared Error: 6.4733\n",
+      "- Mean Absolute Error: 5.0577\n",
+      "- R2 Score: 0.8278\n",
       "===================================\n",
       "\n",
       "\n",
@@ -757,14 +757,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7843\n",
-      "- Mean Absolute Error: 4.7564\n",
-      "- R2 Score: 0.8516\n",
+      "- Root Mean Squared Error: 5.8917\n",
+      "- Mean Absolute Error: 4.7964\n",
+      "- R2 Score: 0.8460\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0447\n",
-      "- Mean Absolute Error: 4.6813\n",
-      "- R2 Score: 0.8498\n",
+      "- Root Mean Squared Error: 6.2090\n",
+      "- Mean Absolute Error: 4.9078\n",
+      "- R2 Score: 0.8416\n",
       "===================================\n",
       "\n",
       "\n"
@@ -772,6 +772,9 @@
     }
    ],
    "source": [
+    "# Model Initialization: Initially, a dictionary called models is created. It contains different regression \n",
+    "# models initialized with their respective constructors. These models include Linear\n",
+    "# Regression, Lasso Regression, Ridge Regression, K-Neighbors Regressor, Decision Tree Regressor, Random Forest Regressor, XGBoost Regressor, CatBoost Regressor, and AdaBoost Regressor.\n",
     "models = {\n",
     "    \"Linear Regression\": LinearRegression(),\n",
     "    \"Lasso\": Lasso(),\n",
@@ -783,9 +786,31 @@
     "    \"CatBoosting Regressor\": CatBoostRegressor(verbose=False),\n",
     "    \"AdaBoost Regressor\": AdaBoostRegressor()\n",
     "}\n",
+    "\n",
+    "# model_list to store the names of the models, and r2_list to store the R2 scores of the models.\n",
     "model_list = []\n",
     "r2_list =[]\n",
     "\n",
+    "'''\n",
+    "Loop Iteration:\n",
+    "The loop iterates over a range of indices from 0 to the length of the list of models (len(list(models))). This loop is designed to iterate over each model in the models dictionary.\n",
+    "Accessing Models:\n",
+    "Within each iteration, the code accesses the model using the current index (i). It retrieves the model object from the dictionary using list(models.values())[i].\n",
+    "Model Training:\n",
+    "After accessing the model, it's trained using the fit() method with the training data (X_train, y_train). This step is crucial as it teaches the model to learn patterns from the training data.\n",
+    "Making Predictions:\n",
+    "Once the model is trained, it makes predictions on both the training and test datasets using the predict() method. This step generates predicted values for the target variable based on the input features.\n",
+    "Model Evaluation:\n",
+    "After making predictions, the code evaluates the model's performance on both the training and test datasets. This is done by comparing the predicted values with the actual target values.\n",
+    "The evaluation metrics include Mean Absolute Error (MAE), Root Mean Squared Error (RMSE), and R2 Score. These metrics help assess how well the model is performing in terms of prediction accuracy and goodness of fit.\n",
+    "Printing Results:\n",
+    "The code prints the model's name, followed by its performance metrics for both the training and test datasets.\n",
+    "Each model's performance is printed under the headings \"Model performance for Training set\" and \"Model performance for Test set\", along with the respective metrics.\n",
+    "Additionally, a line of dashes ('-') separates the training and test set performance to enhance readability.\n",
+    "The equal signs ('=') at the end of each iteration create a visual separation between the evaluation results of different models.\n",
+    "Appending Results:\n",
+    "The R2 score of each model on the test dataset is appended to the r2_list. This list likely stores R2 scores for further analysis or comparison.    \n",
+    "'''\n",
     "for i in range(len(list(models))):\n",
     "    model = list(models.values())[i]\n",
     "    model.fit(X_train, y_train) # Train model\n",
@@ -829,8 +854,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "598b4221",
+   "metadata": {},
+   "source": [
+    "an R2 score of 0.8 means that 80% of the variance in the target variable is explained by the model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -861,14 +894,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>0.881171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Ridge</td>\n",
        "      <td>0.880593</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Linear Regression</td>\n",
-       "      <td>0.880345</td>\n",
+       "      <th>5</th>\n",
+       "      <td>Random Forest Regressor</td>\n",
+       "      <td>0.851675</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -878,12 +916,12 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.849847</td>\n",
+       "      <td>0.841573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.847291</td>\n",
+       "      <th>6</th>\n",
+       "      <td>XGBRegressor</td>\n",
+       "      <td>0.827797</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -891,19 +929,14 @@
        "      <td>0.825320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>XGBRegressor</td>\n",
-       "      <td>0.821589</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>K-Neighbors Regressor</td>\n",
-       "      <td>0.783813</td>\n",
+       "      <td>0.784518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.760313</td>\n",
+       "      <td>0.758854</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -911,18 +944,18 @@
       ],
       "text/plain": [
        "                Model Name  R2_Score\n",
+       "0        Linear Regression  0.881171\n",
        "2                    Ridge  0.880593\n",
-       "0        Linear Regression  0.880345\n",
+       "5  Random Forest Regressor  0.851675\n",
        "7    CatBoosting Regressor  0.851632\n",
-       "8       AdaBoost Regressor  0.849847\n",
-       "5  Random Forest Regressor  0.847291\n",
+       "8       AdaBoost Regressor  0.841573\n",
+       "6             XGBRegressor  0.827797\n",
        "1                    Lasso  0.825320\n",
-       "6             XGBRegressor  0.821589\n",
-       "3    K-Neighbors Regressor  0.783813\n",
-       "4            Decision Tree  0.760313"
+       "3    K-Neighbors Regressor  0.784518\n",
+       "4            Decision Tree  0.758854"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -949,7 +982,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Accuracy of the model is 88.03\n"
+      " Accuracy of the model is 88.12\n"
      ]
     }
    ],
@@ -1023,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1063,26 +1096,26 @@
        "    <tr>\n",
        "      <th>737</th>\n",
        "      <td>53</td>\n",
-       "      <td>58.953125</td>\n",
-       "      <td>-5.953125</td>\n",
+       "      <td>58.796875</td>\n",
+       "      <td>-5.796875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>740</th>\n",
        "      <td>80</td>\n",
-       "      <td>76.960938</td>\n",
-       "      <td>3.039062</td>\n",
+       "      <td>76.976562</td>\n",
+       "      <td>3.023438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>660</th>\n",
        "      <td>74</td>\n",
-       "      <td>76.757812</td>\n",
-       "      <td>-2.757812</td>\n",
+       "      <td>76.984375</td>\n",
+       "      <td>-2.984375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>411</th>\n",
        "      <td>84</td>\n",
-       "      <td>87.539062</td>\n",
-       "      <td>-3.539062</td>\n",
+       "      <td>87.664062</td>\n",
+       "      <td>-3.664062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1093,32 +1126,32 @@
        "    <tr>\n",
        "      <th>408</th>\n",
        "      <td>52</td>\n",
-       "      <td>43.546875</td>\n",
-       "      <td>8.453125</td>\n",
+       "      <td>43.367188</td>\n",
+       "      <td>8.632812</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>332</th>\n",
        "      <td>62</td>\n",
-       "      <td>62.031250</td>\n",
-       "      <td>-0.031250</td>\n",
+       "      <td>62.156250</td>\n",
+       "      <td>-0.156250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>208</th>\n",
        "      <td>74</td>\n",
-       "      <td>67.976562</td>\n",
-       "      <td>6.023438</td>\n",
+       "      <td>67.812500</td>\n",
+       "      <td>6.187500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>613</th>\n",
        "      <td>65</td>\n",
-       "      <td>67.132812</td>\n",
-       "      <td>-2.132812</td>\n",
+       "      <td>67.125000</td>\n",
+       "      <td>-2.125000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>78</th>\n",
        "      <td>61</td>\n",
-       "      <td>62.492188</td>\n",
-       "      <td>-1.492188</td>\n",
+       "      <td>62.343750</td>\n",
+       "      <td>-1.343750</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1128,21 +1161,21 @@
       "text/plain": [
        "     Actual Value  Predicted Value  Difference\n",
        "521            91        76.507812   14.492188\n",
-       "737            53        58.953125   -5.953125\n",
-       "740            80        76.960938    3.039062\n",
-       "660            74        76.757812   -2.757812\n",
-       "411            84        87.539062   -3.539062\n",
+       "737            53        58.796875   -5.796875\n",
+       "740            80        76.976562    3.023438\n",
+       "660            74        76.984375   -2.984375\n",
+       "411            84        87.664062   -3.664062\n",
        "..            ...              ...         ...\n",
-       "408            52        43.546875    8.453125\n",
-       "332            62        62.031250   -0.031250\n",
-       "208            74        67.976562    6.023438\n",
-       "613            65        67.132812   -2.132812\n",
-       "78             61        62.492188   -1.492188\n",
+       "408            52        43.367188    8.632812\n",
+       "332            62        62.156250   -0.156250\n",
+       "208            74        67.812500    6.187500\n",
+       "613            65        67.125000   -2.125000\n",
+       "78             61        62.343750   -1.343750\n",
        "\n",
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
